feat: allow a user to add notes about diet, weightlifting, outdoor climbing
